# CyberResearch

./: .env.template  .gitignore  Dockerfile  Dockerfile.alpine  README.md  cli.py  docker-compose-alpine.yml  docker-compose.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
config/: __init__.py  constants.py
tools/: __init__.py  date_time.py  synbolic_math.py  web_crawler.py  web_search.py
utils/: __init__.py  print_msg.py
