[project]
name = "cyberresearch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.3.0",
    "dotenv>=0.9.9",
    "langchain-openai>=1.1.6",
    "rich>=14.2.0",
    "sympy>=1.14.0",
    "tavily-python>=0.7.17",
]
